# webscraping-buddy

./: .gitignore  Automation_Selenium.ipynb  README.md  pyproject.toml  run_interactive_crawler.py  run_openvc_contact_crawler.py  run_vcsheet_contact_crawler.py
crawler/core/: base_crawler.py  errors.py  extractors.py  headers.py  page.py
crawler/openvc/: fund_page.py  home_page.py  openvc_contact_crawler.py
crawler/vcsheet/: investors_page.py  vcsheet_contact_crawler.py
interactive_crawler/: extractors.py  interactive_spider.py  jsonl_pipeline.py
interactive_crawler/spiders/ig_spiders/: influencers_spider.py  public_images_spider.py
interactive_crawler/spiders/investors_spiders/: vcsheet_investors_spider.py
interactive_crawler/spiders/xhs_spiders/: influencers_spider.py
scrapy_crawler/: scrapy.cfg
scrapy_crawler/investors_crawler/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_crawler/investors_crawler/spiders/: openvc_investors_spider.py  vcsheet_investors_spider.py
scripts/: download_images.py  prune_openvc_investors.py  prune_vcsheet_investors.py
spider_configs/: influnecers_spider_config.sample.json  public_images_spider_config.sample.json
