[tool.poetry]
name = "webscraping-buddy"
version = "0.1.0"
description = "A minimum set of development toolkits for developing web crawlers."
authors = ["lokhiufung <lokhiufung123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
