[tool.poetry]
name = "webscraping-buddy"
version = "0.1.0"
description = "A minimum set of development toolkits for developing web crawlers."
authors = ["lokhiufung <lokhiufung123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
scrapy = "^2.10.1"
scrapy-selenium = "^0.0.7"
playwright = "^1.37.0"
scrapy-playwright = "^0.0.32"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
